--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 __pycache__/
 
 # Built files
-build
+build/*
+build/
 !build/.gdignore
 *.o
 *.os
@@ -18,6 +19,10 @@ build
 *.xcframework
 *.wasm
 compile_commands.json
+addons/lua-gdextension/CHANGELOG.md
+addons/lua-gdextension/README.md
+addons/lua-gdextension/LICENSE
+/addons/lua-gdextension/build
 src/generated/
 src/generated-document/
 
@@ -28,8 +33,3 @@ test/godot
 # Some IDE generated configuration files
 .vs/
 .vscode/
-
-# Addons files
-addons/lua-gdextension/CHANGELOG.md
-addons/lua-gdextension/README.md
-addons/lua-gdextension/LICENSE
